--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-
-
-ul {
-  list-style-type: none;
-  margin: 5px 10% ;
-  padding: 0;
-  overflow: hidden;
-  background-color: #A0937D;
+/*  */
+.three-cards {
+  display: grid;
+  grid-template-columns: 300px 300px 300px;
+  grid-gap: 1rem;
   
 }
 
-li {
-  float: left;
-  margin-left: 30px;
+.flip-card {
+
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
+  margin: 20px;
+
+
 }
 
-li a {
-  display: block;
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-card-back {
+  background-color: purple;
   color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li a:hover:not(.active) {
-  background-color: #111;
-}
-
-.active {
-  background-color: #3A6351;
-}
-.right{
-  float: right;
-
-}
-h1{
-  text-align: center;
+  transform: rotateY(180deg);
+  padding: 10px;
+  text-align: justify;
 }
